# agent-xlsx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  real-world-feedback.md
.claude/commands/: release.md
.github/workflows/: docs.yml  publish.yml
docs/: .gitignore  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml
docs/public/: CNAME
docs/src/app/: globals.css  layout.tsx  page.mdx
docs/src/app/backends/: page.mdx
docs/src/app/changelog/: page.mdx
docs/src/app/commands/: page.mdx
docs/src/app/formats/: page.mdx
docs/src/app/installation/: page.mdx
docs/src/app/quick-start/: page.mdx
docs/src/components/: code-block.tsx  copy-button.tsx  header.tsx  mobile-nav-context.tsx  sidebar.tsx  theme-toggle.tsx
docs/src/lib/: docs-navigation.ts
skills/agent-xlsx/: SKILL.md
skills/agent-xlsx/references/: backends.md  commands.md
src/agent_xlsx/: __init__.py  __main__.py  cli.py
src/agent_xlsx/adapters/: aspose_adapter.py  libreoffice_adapter.py  oletools_adapter.py  openpyxl_adapter.py  polars_adapter.py  xlwings_adapter.py
src/agent_xlsx/commands/: export.py  format.py  inspect.py  license_cmd.py  objects.py  overview.py  probe.py  read.py  recalc.py  screenshot.py  search.py  sheet.py  vba.py  write.py
src/agent_xlsx/formatters/: json_formatter.py  token_optimizer.py
src/agent_xlsx/utils/: config.py  constants.py  dataframe.py  dates.py  engine.py  errors.py  memory.py  validation.py
tests/: conftest.py  test_engine.py  test_export.py  test_format.py  test_inspect.py  test_license.py  test_main.py  test_objects.py  test_overview.py  test_probe.py  test_read.py  test_recalc.py  test_screenshot.py  test_search.py  test_security.py  test_sheet.py  test_utils.py  test_vba.py  test_write.py
tests/fixtures/: vba_sample.xlsm
